# Miscellaneous

./: README  README.md
DeepLearning_Notes/: Parquet_and_Tensorflow_HowTo.md  Parquet_to_Tensorflow_PyTorch_HowTo.md  README.md  Write_TFRecord_with_Spark_HowTo.md
Impala_SQL_Jupyter/: Impala_Basic.ipynb  Impala_Basic_Kerberos.ipynb  Impala_SQL_Magic.ipynb  Impala_SQL_Magic_Kerberos.ipynb  README.md
KStackSampler/: README  kstacksampler.sh
Oracle_Jupyter/: Oracle_IPython_SQL_magic.ipynb  Oracle_IPython_cx_Oracle_pandas.ipynb  Oracle_IPython_sqlplus.ipynb  Oracle_Jupyter_oracledb_pandas.ipynb  Oracle_histograms.ipynb  README.md
PLSQL_Neural_Network/: MNIST_oracle_plsql.ipynb  MNIST_tensorflow_exp_to_oracle.ipynb  README.md
Perf_Testing/: Graphs_CPU_tests_RAC5x_SLOB_Oracle_Logical_IO.ipynb  Graphs_CPU_tests_simple_RAC5x.ipynb  README.md  test_CPU_parallel.py
Performance_Testing/: README.md  Tools_FlameGraphs.md  Tools_Linux_Memory_Perf_Measure.md  Tools_Linux_OS_CPU_Disk_Network.md
Performance_Testing/Test_CPU_parallel_Rust/Code_test_CPU_Rust/: Cargo.toml  README.md
Performance_Testing/Test_CPU_parallel_Rust/Code_test_CPU_Rust/src/: main.rs  test_cpu_parallel.rs
PostgreSQL_Jupyter/: PostgreSQL_histograms.ipynb  README.md
PostgreSQL_YugabyteDB_Jupyter/: PostgreSQL_histograms.ipynb  README.md  YugabyteDB_histograms.ipynb
Pyspark_SQL_Magic_Jupyter/: IPython_Pyspark_SQL_Magic.ipynb  IPython_Pyspark_SQL_Magic.py  README.md
SQL_color_Mandelbrot/: Color_palette_blue.sql  Color_palette_yellow-red.sql  Mandelbrot_SQL_Oracle_color_blue.sql  README  README.md  (+3 more)
(+220 files in other folders)
